--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,120 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+*{
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.center-div {
+    width: min(72rem,96%);
+    margin: 0 auto;
+}
+.center-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.btn-1{
+    padding: 0.5rem 3rem;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+    border: none;
+    background-color: #007bff;
+    transition: scale ease-in-out 0.2s;
+}
+.btn-1:hover{
+    scale: 1.1;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bg-1{
+    width: 100%;
+    height: 15vh;
+}
+.bg-2{
+    background-color: #F4B400;
+
+}
+.main{
+    position: relative;
+}
+.dot-deco{
+    position: absolute;
+    border-radius: 50%;
+    z-index: -4;
+    transform: translate(-50%,-50%);
+}
+
+.dot-deco:nth-child(2){
+    width: 300px;
+    height: 300px;
+    top: 20%;
+    left: 0%;
+    background-color: #007bff; 
+    animation: fleak 1.2s ease-in-out alternate-reverse infinite;
+
+}
+
+.dot-deco:nth-child(3){
+    width: 50px;
+    height: 50px;
+    bottom: 10%;
+    left: 10%;
+    background-color: #0F9D58; 
+    animation: fleak 1s ease-in-out alternate-reverse infinite;
+
+}
+.dot-deco:nth-child(4){
+    width: 70px;
+    height: 70px;
+    top: 10%;
+    right: 20%;
+    background-color: #EA4335; 
+    animation: fleak 1s ease-in-out alternate-reverse infinite;
+
+}
+.dot-deco:nth-child(5){
+    width: 500px;
+    height: 500px;
+    bottom: -25%;
+    right: -35%;
+    background-color: #FBBC04; 
+    animation: fleak 1.5s ease-in-out alternate-reverse infinite;
+
+}
+
+@keyframes fleak {
+    0%{
+        transform: translate(-50%,-50%);
+    }
+
+    100%{
+        transform: translate(0,0);
+    }
+    
+}
+.Page-Header {
+    height: 25vh;
+}
+.Page-Header h2{
+    font-size: 3rem;
+    line-height: 3.875rem;
+    color: #3c4043;
+    font-weight: 400;
+}
+.Page-Header p {
+    margin-top: 2rem;
+    width: min(65rem,90%);
+    font-size: 18px;
+    /* color: white; */
+    display: none;
+
+}
+
+@media screen and (max-width: 800px) {
+    .Page-Header h2{
+        font-size: 1.5rem;}
 }
