--- a/src/Pages/events.css
+++ b/src/Pages/events.css
@@ -32,3 +32,38 @@ a{
     }
 }
 
+.card-front{
+    z-index: 2;
+}
+.front,
+.back {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: white;
+  line-height: 300px;
+  text-align: center;
+  font-size: 60px;
+  border-radius: 5px;
+  backface-visibility: hidden;
+}
+
+
+.card-back{
+    display: none;
+    color: white;
+    z-index: 1;
+  
+}
+.Session_Cards:hover .Session_Card{
+    transform: rotateY(180deg);
+    transition: transform 0.5s;
+   
+}
+
+.card.active .card-back {
+    display: flex; /* Show the back when the card is active */
+  }
+  
+  .card.active .card-front {
+    display: none;}
