--- a/src/Pages/events.css
+++ b/src/Pages/events.css
@@ -19,6 +19,76 @@ a{
     text-decoration: none;
 }
 
+    
+.Session_Cards{
+    position: relative;
+  margin-left: 50%;
+    margin-top: 20%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+    align-self: center;
+   
+}
+
+.Session_Card{
+    margin: 20px 40px 40px 20px;
+  width: 300px;
+  height: 500px;
+  transform-style: preserve-3d;
+  perspective: 600px;
+  transition: 0.5s;
+}
+
+.Session_Card .front {
+    border: solid 2px #F9BC15;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transition: 0.5s;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000,
+      5px 5px 15px 5px rgba(0, 0, 0, 0);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  }
+
+
+  .Session_Card:hover .front {
+    transform: rotateY(-180deg);
+  }
+  
+  .Session_Card .back {
+    border: solid 2px #4285F4;
+    width: 100%;
+    height: 100%;
+    background: white;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+    transition: 0.5s;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000,
+      5px 5px 15px 5px rgba(0, 0, 0, 0);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  
+  
+  }
+  
+  .Session_Card:hover .back {
+    transform: rotateY(0deg);
+  }
+  
+  .Session_Card .back .card-text .btn-1 {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
 .event-bg{
     background: url("../Images/bg/team.png") 50%/ cover no-repeat;
     background-repeat: no-repeat;
@@ -32,38 +102,3 @@ a{
     }
 }
 
-.card-front{
-    z-index: 2;
-}
-.front,
-.back {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: white;
-  line-height: 300px;
-  text-align: center;
-  font-size: 60px;
-  border-radius: 5px;
-  backface-visibility: hidden;
-}
-
-
-.card-back{
-    display: none;
-    color: white;
-    z-index: 1;
-  
-}
-.Session_Cards:hover .Session_Card{
-    transform: rotateY(180deg);
-    transition: transform 0.5s;
-   
-}
-
-.card.active .card-back {
-    display: flex; /* Show the back when the card is active */
-  }
-  
-  .card.active .card-front {
-    display: none;}
