--- a/src/Pages/team.css
+++ b/src/Pages/team.css
@@ -12,6 +12,7 @@
 .Team_Card {
     position: relative;
     max-width: 200px;
+   
     margin: 0.5rem auto;
   overflow: hidden;
   border-radius: 10px;
@@ -36,6 +37,8 @@ z-index: -1;
     display: block;
   border-radius: 50%;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   border: solid #ea4335 5px;
   object-position: center;
   transition: all ease-in-out 0.2s;
